# cowork-harness

./: .cowork-redact.json  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASING.md  SECURITY.md  SPEC.md  action.yml  llms.txt  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.live.ts  vitest.config.ts
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
baselines/: desktop-1.11847.5.json  desktop-1.12603.1.json  desktop-1.13576.1.json  desktop-1.14271.0.json  desktop-1.15200.0.json  desktop-1.15962.0.json  desktop-1.15962.1.json  desktop-1.17377.1.json  desktop-1.17377.2.json  desktop-1.18286.0.json  desktop-1.18286.2.json  desktop-1.19367.0.json  desktop-1.20186.0.json  desktop-1.20186.1.json  desktop-1.20186.9.json  desktop-1.21459.0.json  desktop-1.22209.3.json  desktop-1.24012.0.json  desktop-1.24012.1.json
docker/: Dockerfile.agent  Dockerfile.proxy  compose.yml
docs/: README.md  boundary.md  cassette.md  chat.md  cowork-spawn-contract-1.12603.1.md  critique.md  debugging.md  decider-dir.md  discovery.md  fidelity-gaps.md  gotchas.md  invariants.md  maintenance.md  plugin-root.md  protocol.md  run-status.md  scenario.md  session.md  stats.md  subagents.md
examples/: README.md
fixtures/: subagent-grants.json
python/: README.md  conftest.py  cowork_harness.py  pyproject.toml  test_cowork_lane.py  test_csv_fx_lane.py  test_csv_metrics_lane.py  test_scenario_lint.py
(+580 files in other folders)
